force-app/main/default/objects/AG_Activity__c/AG_Activity__c.object-meta.xml
<CustomObject>
    <label>Activity</label>
    <nameField>
        <displayFormat>AC-{0000000000}</displayFormat>
        <label>Activity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>