force-app/main/default/objects/AG_Activity__c/fields/AG_Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>AG_Activity_Name__c</fullName>
    <label>Activity Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>