force-app/main/default/objects/AG_Activity__c/fields/AG_Description__c.field-meta.xml
<CustomField>
    <fullName>AG_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>