force-app/main/default/objects/AG_Activity__c/fields/AG_Service_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>AG_Service_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Line Item</label>
    <referenceTo>AG_Service_Line_Item__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>